<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:padding="0.75dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/applianceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/productImageView"
            android:text="@string/appliance_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sellerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applianceNameTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/productImageView"
            android:text="@string/seller_name"
            android:textAllCaps="true" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sellerTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/productImageView"
            android:padding="5dp"
            app:srb_borderColor="@color/colorPrimaryDark"
            app:srb_fillColor="@color/colorPrimary"
            app:srb_numberOfStars="5"
            app:srb_starSize="20dp" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/productImageView"
            android:gravity="end"
            android:text="@string/product_price" />
    </RelativeLayout>
</android.support.v7.widget.CardView>