<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:padding="5dp">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="0.75dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/applianceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productImageView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/appliance_name"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applianceNameTextView"
            android:layout_margin="0dp"
            android:padding="0dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <TextView
                    android:id="@+id/seller1TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/seller_name"
                    android:textAllCaps="true" />

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seller1TextView"
                    android:paddingBottom="5sp"
                    android:paddingTop="5sp"
                    app:srb_borderColor="@color/colorPrimaryDark"
                    app:srb_fillColor="@color/colorPrimary"
                    app:srb_numberOfStars="5"
                    app:srb_starSize="20dp"
                    android:layout_marginRight="-3dp"/>

                <TextView
                    android:id="@+id/price1TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingBar1"
                    android:padding="10sp"
                    android:text="@string/product_price" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <TextView
                    android:id="@+id/seller2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp"
                    android:text="@string/seller_name"
                    android:textAllCaps="true" />

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/ratingBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seller2TextView"
                    app:srb_borderColor="@color/colorPrimaryDark"
                    app:srb_fillColor="@color/colorPrimary"
                    app:srb_numberOfStars="5"
                    app:srb_starSize="20dp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:layout_marginRight="-3dp"/>

                <TextView
                    android:id="@+id/price2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingBar2"
                    android:text="@string/product_price"
                    android:padding="10sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <TextView
                    android:id="@+id/seller3TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textAllCaps="true"
                    android:padding="10sp"/>

                <com.iarcuschin.simpleratingbar.SimpleRatingBar
                    android:id="@+id/ratingBar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seller3TextView"
                    app:srb_borderColor="@color/colorPrimaryDark"
                    app:srb_fillColor="@color/colorPrimary"
                    app:srb_numberOfStars="5"
                    app:srb_starSize="20dp"
                    android:paddingTop="5sp"
                    android:paddingBottom="5sp"
                    android:layout_marginLeft="1dp" />

                <TextView
                    android:id="@+id/price3TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingBar3"
                    android:text="@string/product_price"
                    android:padding="10sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>