<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="0dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="0dp">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="233dp"
            android:layout_height="161dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/applianceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/productImageView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="sony X9400E/X9300E| LED 139cm(55) | 4K HDR/ULTRA HD | SMART TV (ANDROID TV) | ULTRA SLIM DESIGN"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applianceNameTextView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="1sp"
            app:srb_borderColor="@color/colorPrimaryDark"
            app:srb_fillColor="@color/colorPrimary"
            app:srb_numberOfStars="5"
            app:srb_starSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ratingBar1"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/seller1TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/seller_name"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/price1TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seller1TextView"
                        android:text="@string/product_price"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#0066ff" />

                    <Button
                        android:id="@+id/amazonButton"
                        android:layout_width="150dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="200dp"
                        android:layout_toEndOf="@id/seller1TextView"
                        android:autoLink="all"
                        android:background="@android:color/holo_green_light"
                        android:fontFamily="none"
                        android:gravity="center"
                        android:text="@string/Buy"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:textSize="24sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/seller2TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/seller_name2"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/price2TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seller2TextView"
                        android:text="@string/product_price"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#0066ff" />

                    <Button
                        android:id="@+id/walMartButton"
                        android:layout_width="150dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="200dp"
                        android:layout_toEndOf="@id/seller2TextView"
                        android:autoLink="all"
                        android:background="@android:color/holo_green_light"
                        android:fontFamily="none"
                        android:gravity="center"
                        android:text="@string/Buy"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:textSize="24sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:paddingBottom="-10dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/seller3TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/seller_name3"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/price3TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seller3TextView"
                        android:text="@string/product_price"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#0066ff" />

                    <Button
                        android:id="@+id/targetButton"
                        android:layout_width="150dp"
                        android:layout_height="39dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="200dp"
                        android:layout_toEndOf="@id/seller3TextView"
                        android:autoLink="all"
                        android:background="@android:color/holo_green_light"
                        android:fontFamily="none"
                        android:gravity="center"
                        android:text="@string/Buy"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff"
                        android:textSize="24sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>